--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,9 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./main.jsx"></script> <!-- ✅ FIXED path -->
+    <script type="module" src="./main.jsx"></script>
   </body>
 </html>
-
-
-
